# rust-edis

./: Cargo.toml  README.md
.github/workflows/: autoformat.yaml  clippy.yaml  test.yaml
src/: client.rs  info.rs  lib.rs  message.rs  read_shard.rs  write_shard.rs
src/integration/: mod.rs  test.rs  test_setup.rs
src/io/: mod.rs  read.rs  read_write.rs  router.rs  router_example.rs  write.rs
src/messages/: get_client_shard_info_request.rs  get_client_shard_info_response.rs  list_readers_request.rs  list_readers_response.rs  list_writers_request.rs  list_writers_response.rs  message.rs  mod.rs  query_version_request.rs  write_request.rs
src/messages/requests/: announce_shard_request.rs  get_client_shard_info_request.rs  get_shared_peers_request.rs  get_version_request.rs  mod.rs  query_version_request.rs  read_request.rs  write_request.rs
src/messages/responses/: announce_shard_response.rs  get_client_shard_info_response.rs  get_shared_peers_response.rs  get_version_response.rs  mod.rs  query_version_response.rs  read_response.rs  write_response.rs
src/test/: integration.rs
src/utils/: constants.rs  mod.rs  test_client.rs
