[package]
name = "rust-edis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async_smux = "0.3.4"
int-enum = "1.1.2"
rand = "0.8.5"
tokio = { version = "1.41.1", features = ["full"] }
zerocopy = "0.8.12"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "info"
path = "src/info.rs"

[[bin]]
name = "read_shard"
path = "src/read_shard.rs"

[[bin]]
name = "write_shard"
path = "src/write_shard.rs"
