[package]
name = "rust-edis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
assert_cmd = "2.0.16"
async-recursion = "1.1.1"
async_smux = "0.3.4"
clap = { version = "4.5.23", features = ["derive"] }
dashmap = "6.1.0"
int-enum = "1.1.2"
port-killer = "0.1.0"
predicates = "3.1.2"
rand = "0.8.5"
scc = "2.2.5"
serial_test = "3.2.0"
sysinfo = "0.33.0"
tokio = { version = "1.41.1", features = ["full"] }
zerocopy = "0.8.12"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "info"
path = "src/info.rs"

[[bin]]
name = "read_shard"
path = "src/read_shard.rs"

[[bin]]
name = "write_shard"
path = "src/write_shard.rs"
